added the hate stuff

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -89,6 +89,7 @@
     },
     "managePreferences": "Manage preferences",
     "viewNewsletters": "View newsletters",
+    "myHates": "My exclusions",
     "howItWorks": {
       "title": "How it works",
       "keywordsHint": "Keywords don't need to be exact—e.g. \"Offspring\" or \"The Offspring\" work similarly. They become part of the search prompt.",
@@ -196,7 +197,38 @@
     "autoNewsletterInfo": "We automatically generate and email your newsletter every Thursday at 4 PM. You can also generate and send manually below (up to 5 newsletters per account—contact support for more). This helps us manage AI costs.",
     "limitReached": "You've reached the limit of 5 newsletters. Contact support to request more.",
     "rawAiResponse": "Raw AI Response",
-    "response": "Response"
+    "response": "Response",
+    "hateThisHint": "Use 'Hate this' only for events you DEFINITELY want removed. It excludes that organizer, artist, or venue from future newsletters. Use sparingly."
+  },
+  "hates": {
+    "title": "Exclude this from future newsletters (use sparingly—only for events you definitely want gone)",
+    "trigger": "Hate this",
+    "dropdownTitle": "Exclude from future newsletters",
+    "excludeOrganizer": "Exclude this organizer: {{value}}",
+    "excludeArtist": "Exclude this artist: {{value}}",
+    "excludeVenue": "Exclude this venue: {{value}}",
+    "confirmTitle": "You already have many exclusions",
+    "confirmMessage": "You have 10 or more exclusions. Adding more may over-filter your newsletter. Are you sure you want to exclude this? Use this only for events you DEFINITELY never want to see again.",
+    "confirmAdd": "Yes, exclude it",
+    "addFailed": "Failed to add exclusion",
+    "addedSuccess": "Excluded {{type}}: {{value}}",
+    "hatedLabel": "Hated:",
+    "hatedOrganizer": "this organizer",
+    "hatedArtist": "this artist",
+    "hatedVenue": "this venue",
+    "pageTitle": "My Exclusions",
+    "pageDescription": "Events from these organizers, artists, or venues will never appear in your newsletters. Use sparingly—only for things you definitely want gone. Remove any you no longer want excluded.",
+    "empty": "No exclusions yet. Add them from the newsletter events list when you see something you definitely want removed.",
+    "goToNewsletters": "Go to Newsletters",
+    "count": "{{count}} exclusion(s)",
+    "deleteAll": "Remove all",
+    "deleteAllConfirmTitle": "Remove all exclusions?",
+    "deleteAllConfirmMessage": "This will remove every exclusion. Events from these organizers, artists, and venues may appear in future newsletters again.",
+    "loadFailed": "Failed to load exclusions",
+    "deleteFailed": "Failed to remove exclusion",
+    "typeOrganizer": "Organizer",
+    "typeArtist": "Artist",
+    "typeVenue": "Venue"
   },
   "preferencesLimits": {
     "title": "Preference edit limit",
