--- a/frontend/src/i18n/locales/ro.json
+++ b/frontend/src/i18n/locales/ro.json
@@ -89,6 +89,7 @@
     },
     "managePreferences": "Gestionează preferințele",
     "viewNewsletters": "Vezi newsletterele",
+    "myHates": "Excluderile mele",
     "howItWorks": {
       "title": "Cum funcționează",
       "keywordsHint": "Cuvintele cheie nu trebuie să fie exacte—ex. \"Offspring\" sau \"The Offspring\" funcționează similar. Devin parte din promptul de căutare.",
@@ -196,7 +197,38 @@
     "autoNewsletterInfo": "Generăm și trimitem automat newsletterul tău în fiecare joi la ora 16:00. Poți și genera/trimite manual mai jos (maxim 5 newslettere per cont—contactează suportul pentru mai multe). Asta ne ajută să gestionăm costurile AI.",
     "limitReached": "Ai atins limita de 5 newslettere. Contactează suportul pentru a solicita mai multe.",
     "rawAiResponse": "Răspuns AI Brut",
-    "response": "Răspuns"
+    "response": "Răspuns",
+    "hateThisHint": "Folosește 'Nu vreau' doar pentru evenimente pe care le vrei DEFINITIV eliminate. Exclude organizatorul, artistul sau locul din newsletterele viitoare. Folosește cu moderație."
+  },
+  "hates": {
+    "title": "Exclude din newslettere viitoare (folosește cu moderație—doar pentru evenimente pe care le vrei definitiv eliminate)",
+    "trigger": "Nu vreau",
+    "dropdownTitle": "Exclude din newslettere viitoare",
+    "excludeOrganizer": "Exclude organizatorul: {{value}}",
+    "excludeArtist": "Exclude artistul: {{value}}",
+    "excludeVenue": "Exclude locul: {{value}}",
+    "confirmTitle": "Ai deja multe excluderi",
+    "confirmMessage": "Ai 10 sau mai multe excluderi. Adăugarea mai multor excluderi poate suprasatura newsletterul. Ești sigur că vrei să excluzi acest element? Folosește doar pentru evenimente pe care nu vrei DEFINITIV să le mai vezi.",
+    "confirmAdd": "Da, exclude",
+    "addFailed": "Adăugarea excluderii a eșuat",
+    "addedSuccess": "Exclus {{type}}: {{value}}",
+    "hatedLabel": "Exclus:",
+    "hatedOrganizer": "acest organizator",
+    "hatedArtist": "acest artist",
+    "hatedVenue": "acest loc",
+    "pageTitle": "Excluderile mele",
+    "pageDescription": "Evenimente de la acești organizatori, artiști sau locuri nu vor apărea niciodată în newsletterele tale. Folosește cu moderație—doar pentru lucruri pe care le vrei definitiv eliminate. Șterge pe cele pe care nu le mai vrei excluse.",
+    "empty": "Nicio excludere încă. Adaugă-le din lista de evenimente din newsletter când vezi ceva pe care îl vrei definitiv eliminat.",
+    "goToNewsletters": "Mergi la Newslettere",
+    "count": "{{count}} excluderi",
+    "deleteAll": "Șterge toate",
+    "deleteAllConfirmTitle": "Ștergi toate excluderile?",
+    "deleteAllConfirmMessage": "Se vor șterge toate excluderile. Evenimente de la acești organizatori, artiști și locuri pot apărea din nou în newsletterele viitoare.",
+    "loadFailed": "Încărcarea excluderilor a eșuat",
+    "deleteFailed": "Ștergerea excluderii a eșuat",
+    "typeOrganizer": "Organizator",
+    "typeArtist": "Artist",
+    "typeVenue": "Loc"
   },
   "preferencesLimits": {
     "title": "Limită editări preferințe",
