--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -74,9 +74,9 @@
     "why1": "🚫 No social media browsing — avoid the dopamine trap of endless feeds",
     "why2": "📧 Weekly email only — intentional, not addictive. You get events for the month ahead, so you have time to plan",
     "why3": "✂️ Curated for you — we filter events so you don't waste time sifting through everything",
-    "failure": "How you'll know it's working:",
-    "failure1": "✅ You see events you genuinely want to attend",
-    "failure2": "✅ The list is short enough that you don't feel like you're \"discovering\" or browsing"
+    "expectation": "What to expect:",
+    "expect1": "🔧 This won't be THE TOOL to discover events. It'll help",
+    "expect2": "✨ Expectation is that you don't miss really important events and you have 1–2 'wow, this is interesting' events every week"
   },
   "dashboard": {
     "title": "Dashboard",
@@ -89,14 +89,14 @@
     },
     "managePreferences": "Manage preferences",
     "viewNewsletters": "View newsletters",
-    "myHates": "My exclusions",
+    "myHates": "My dislikes",
     "howItWorks": {
       "title": "How it works",
       "keywordsHint": "Keywords don't need to be exact—e.g. \"Offspring\" or \"The Offspring\" work similarly. They become part of the search prompt.",
       "step1": "Set your preferences (town, interests, etc.)",
       "step2": "A profile will be generated and attached to your account.",
       "step3": "Try generating a newsletter. The system will do some crawling, work its magic, and do its best. See if the events it finds fit you.",
-      "step4": "If some events don't fit, use \"Hate this\" on newsletters to exclude artists, venues, organizers, or specific events. Future newsletters won't include them.",
+      "step4": "If some events don't fit, use \"Dislike this\" on newsletters to exclude artists, venues, organizers, or specific events. Future newsletters won't include them.",
       "step5": "If they do, great! You're all set and you'll get a new newsletter every Thu around 4 PM.",
       "step6": "If they still don't fit, try fiddling with the preferences? Remember though: This is THE TOOL to get you all the events. This is just meant to make your event finding experience a little better."
     },
@@ -200,22 +200,22 @@
     "limitReached": "You've reached the limit of 5 newsletters. Contact support to request more.",
     "rawAiResponse": "Raw AI Response",
     "response": "Response",
-    "hateThisHint": "Use 'Hate this' only for events you DEFINITELY want removed. It excludes that organizer, artist, or venue from future newsletters. Use sparingly."
+    "hateThisHint": "Use 'Dislike this' only for events you DEFINITELY want removed. It excludes that organizer, artist, or venue from future newsletters. Use sparingly."
   },
   "hates": {
     "title": "Exclude this from future newsletters (use sparingly—only for events you definitely want gone)",
-    "trigger": "Hate this",
+    "trigger": "Dislike this",
     "dropdownTitle": "Exclude from future newsletters",
-    "excludeEvent": "Hate this event: {{value}}",
+    "excludeEvent": "Dislike this event: {{value}}",
     "excludeOrganizer": "Exclude this organizer: {{value}}",
     "excludeArtist": "Exclude this artist: {{value}}",
     "excludeVenue": "Exclude this venue: {{value}}",
-    "confirmTitle": "You already have many exclusions",
-    "confirmMessage": "You have 10 or more exclusions. Adding more may over-filter your newsletter. Are you sure you want to exclude this? Use this only for events you DEFINITELY never want to see again.",
+    "confirmTitle": "You already have many dislikes",
+    "confirmMessage": "You have 10 or more dislikes. Adding more may over-filter your newsletter. Are you sure you want to exclude this? Use this only for events you DEFINITELY never want to see again.",
     "confirmAdd": "Yes, exclude it",
-    "addFailed": "Failed to add exclusion",
+    "addFailed": "Failed to add dislike",
     "addedSuccess": "Excluded {{type}}: {{value}}",
-    "hatedLabel": "Hated:",
+    "hatedLabel": "Disliked:",
     "hatedOrganizer": "this organizer",
     "hatedArtist": "this artist",
     "hatedVenue": "this venue",
@@ -225,21 +225,29 @@
     "typeEvent": "Event",
     "eventLimitWarning": "Only the 15 most recently added events are used when finding new events. Events below that are no longer considered.",
     "notConsidered": "not considered for new events",
-    "pageTitle": "My Exclusions",
+    "pageTitle": "My Dislikes",
     "pageDescription": "Events from these organizers, artists, or venues will never appear in your newsletters. Use sparingly—only for things you definitely want gone. Remove any you no longer want excluded.",
-    "empty": "No exclusions yet. Add them from the newsletter events list when you see something you definitely want removed.",
+    "empty": "No dislikes yet. Add them from the newsletter events list when you see something you definitely want removed.",
     "goToNewsletters": "Go to Newsletters",
-    "count": "{{count}} exclusion(s)",
+    "count": "{{count}} dislike(s)",
     "deleteAll": "Remove all",
-    "deleteAllConfirmTitle": "Remove all exclusions?",
-    "deleteAllConfirmMessage": "This will remove every exclusion. Events from these organizers, artists, and venues may appear in future newsletters again.",
-    "loadFailed": "Failed to load exclusions",
-    "deleteFailed": "Failed to remove exclusion",
+    "deleteAllConfirmTitle": "Remove all dislikes?",
+    "deleteAllConfirmMessage": "This will remove every dislike. Events from these organizers, artists, and venues may appear in future newsletters again.",
+    "loadFailed": "Failed to load dislikes",
+    "deleteFailed": "Failed to remove dislike",
     "howExclusionsWorkTitle": "How exclusions are used",
-    "howExclusionsWork": "When finding events for your newsletter, the system excludes any event that matches your exclusions: events with a hated artist, venue, or organizer are filtered out before ranking. Event exclusions (specific event titles) are also applied. Only the 15 most recently added event exclusions are considered; artist, venue, and organizer exclusions have no limit.",
+    "howExclusionsWork": "When finding events for your newsletter, the system excludes any event that matches your dislikes: events with a disliked artist, venue, or organizer are filtered out before ranking. Event dislikes (specific event titles) are also applied. Only the 15 most recently added event dislikes are considered; artist, venue, and organizer dislikes have no limit.",
     "typeOrganizer": "Organizer",
     "typeArtist": "Artist",
-    "typeVenue": "Venue"
+    "typeVenue": "Venue",
+    "dislikeInfoModalTitle": "You just disliked something, let's find out what that means",
+    "dislikeInfoLine1": "You just disliked something, let's find out what that means.",
+    "dislikeInfoLine2": "Dislike this event — the AI takes event details into account more opaquely.",
+    "dislikeInfoLine3": "Or dislike the venue/artist/organizer — a strong dislike. You won't get other events from those again.",
+    "dislikeInfoLine4": "My Dislikes — view and edit your list if you change your mind",
+    "dislikeInfoLine4Page": "Your list is below — edit or remove any if you change your mind",
+    "pageHeader": "Your dislikes",
+    "dislikeInfoLine5": "Remember: aim for 'good enough', not perfect."
   },
   "preferencesLimits": {
     "title": "Preference edit limit",
