--- a/frontend/src/i18n/locales/ro.json
+++ b/frontend/src/i18n/locales/ro.json
@@ -74,9 +74,9 @@
     "why1": "🚫 Ca sa nu fie nevoie sa cauti pe rețele sociale — evită capcana dopaminei din feed-urile nesfârșite",
     "why2": "📧 Sa reduca problema la un email săptămânal — intenționat, nu pasiv. Primești evenimente pentru luna următoare, așa că ai timp să planifici",
     "why3": "✂️ Special pentru tine — uneori sunt multe evenimente. AI-ul te ajuta sa le elimini pe cele care nu te intereseaza",
-    "failure": "Cum vei ști că funcționează:",
-    "failure1": "✅ Vezi evenimente la care chiar vrei să participi",
-    "failure2": "✅ Lista este suficient de scurtă încât să nu simți că \"descoperi\" sau navighezi"
+    "expectation": "Ce să te aștepți:",
+    "expect1": "🔧 Nu va fi UNELTA principală pentru a descoperi evenimente. Te va ajuta",
+    "expect2": "✨ Așteptarea e să nu pierzi evenimente cu adevărat importante și să ai 1–2 evenimente „wow, e interesant” pe săptămână"
   },
   "dashboard": {
     "title": "Panou de control",
@@ -89,14 +89,14 @@
     },
     "managePreferences": "Gestionează preferințele",
     "viewNewsletters": "Vezi newsletterele",
-    "myHates": "Excluderile mele",
+    "myHates": "Dislike-urile mele",
     "howItWorks": {
       "title": "Cum funcționează",
       "keywordsHint": "Cuvintele cheie nu trebuie să fie exacte—ex. \"Offspring\" sau \"The Offspring\" funcționează similar. Devin parte din promptul de căutare.",
       "step1": "Setează preferințele tale (oraș, interese, etc.)",
       "step2": "Un profil va fi generat și atașat contului tău.",
       "step3": "Încearcă să generezi un newsletter. Sistemul va face crawling, își va face magia și va încerca să găsească evenimente pentru tine. Vezi dacă se potrivesc.",
-      "step4": "Dacă unele evenimente nu se potrivesc, folosește \"Nu vreau\" pe newslettere pentru a exclude artiști, locuri, organizatori sau evenimente anume. Newsletterele viitoare nu le vor include.",
+      "step4": "Dacă unele evenimente nu se potrivesc, folosește \"Nu-mi place\" pe newslettere pentru a exclude artiști, locuri, organizatori sau evenimente anume. Newsletterele viitoare nu le vor include.",
       "step5": "Dacă da, perfect! Ești gata și vei primi un newsletter nou în fiecare joi pe la ora 16.",
       "step6": "Dacă tot nu se potrivesc, încearcă să ajustezi preferințele? Ține minte însă: Acesta E UNELTA pentru a obține toate evenimentele. Este doar menit să îți facă experiența de căutare a evenimentelor puțin mai plăcută."
     },
@@ -200,22 +200,22 @@
     "limitReached": "Ai atins limita de 5 newslettere. Contactează suportul pentru a solicita mai multe.",
     "rawAiResponse": "Răspuns AI Brut",
     "response": "Răspuns",
-    "hateThisHint": "Folosește 'Nu vreau' doar pentru evenimente pe care le vrei DEFINITIV eliminate. Exclude organizatorul, artistul sau locul din newsletterele viitoare. Folosește cu moderație."
+    "hateThisHint": "Folosește 'Nu-mi place' doar pentru evenimente pe care le vrei DEFINITIV eliminate. Exclude organizatorul, artistul sau locul din newsletterele viitoare. Folosește cu moderație."
   },
   "hates": {
     "title": "Exclude din newslettere viitoare (folosește cu moderație—doar pentru evenimente pe care le vrei definitiv eliminate)",
-    "trigger": "Nu vreau",
+    "trigger": "Nu-mi place",
     "dropdownTitle": "Exclude din newslettere viitoare",
-    "excludeEvent": "Nu vreau acest eveniment: {{value}}",
+    "excludeEvent": "Nu-mi place acest eveniment: {{value}}",
     "excludeOrganizer": "Exclude organizatorul: {{value}}",
     "excludeArtist": "Exclude artistul: {{value}}",
     "excludeVenue": "Exclude locul: {{value}}",
-    "confirmTitle": "Ai deja multe excluderi",
-    "confirmMessage": "Ai 10 sau mai multe excluderi. Adăugarea mai multor excluderi poate suprasatura newsletterul. Ești sigur că vrei să excluzi acest element? Folosește doar pentru evenimente pe care nu vrei DEFINITIV să le mai vezi.",
+    "confirmTitle": "Ai deja multe dislike-uri",
+    "confirmMessage": "Ai 10 sau mai multe dislike-uri. Adăugarea mai multor poate suprasatura newsletterul. Ești sigur că vrei să excluzi acest element? Folosește doar pentru evenimente pe care nu vrei DEFINITIV să le mai vezi.",
     "confirmAdd": "Da, exclude",
-    "addFailed": "Adăugarea excluderii a eșuat",
+    "addFailed": "Adăugarea dislike-ului a eșuat",
     "addedSuccess": "Exclus {{type}}: {{value}}",
-    "hatedLabel": "Exclus:",
+    "hatedLabel": "Nu-mi place:",
     "hatedOrganizer": "acest organizator",
     "hatedArtist": "acest artist",
     "hatedVenue": "acest loc",
@@ -225,18 +225,26 @@
     "typeEvent": "Eveniment",
     "eventLimitWarning": "Doar cele 15 evenimente adăugate cel mai recent sunt luate în considerare la căutarea de evenimente noi. Cele de mai jos nu mai sunt considerate.",
     "notConsidered": "nu mai este considerat pentru evenimente noi",
-    "pageTitle": "Excluderile mele",
+    "pageTitle": "Dislike-urile mele",
     "pageDescription": "Evenimente de la acești organizatori, artiști sau locuri nu vor apărea niciodată în newsletterele tale. Folosește cu moderație—doar pentru lucruri pe care le vrei definitiv eliminate. Șterge pe cele pe care nu le mai vrei excluse.",
-    "empty": "Nicio excludere încă. Adaugă-le din lista de evenimente din newsletter când vezi ceva pe care îl vrei definitiv eliminat.",
+    "empty": "Niciun dislike încă. Adaugă-le din lista de evenimente din newsletter când vezi ceva pe care îl vrei definitiv eliminat.",
     "goToNewsletters": "Mergi la Newslettere",
-    "count": "{{count}} excluderi",
+    "count": "{{count}} dislike-uri",
     "deleteAll": "Șterge toate",
-    "deleteAllConfirmTitle": "Ștergi toate excluderile?",
-    "deleteAllConfirmMessage": "Se vor șterge toate excluderile. Evenimente de la acești organizatori, artiști și locuri pot apărea din nou în newsletterele viitoare.",
-    "loadFailed": "Încărcarea excluderilor a eșuat",
-    "deleteFailed": "Ștergerea excluderii a eșuat",
+    "deleteAllConfirmTitle": "Ștergi toate dislike-urile?",
+    "deleteAllConfirmMessage": "Se vor șterge toate dislike-urile. Evenimente de la acești organizatori, artiști și locuri pot apărea din nou în newsletterele viitoare.",
+    "loadFailed": "Încărcarea dislike-urilor a eșuat",
+    "deleteFailed": "Ștergerea dislike-ului a eșuat",
     "howExclusionsWorkTitle": "Cum sunt folosite excluderile",
-    "howExclusionsWork": "Când căutăm evenimente pentru newsletterul tău, sistemul exclude orice eveniment care se potrivește excluderilor tale: evenimente cu artist, loc sau organizator exclus sunt filtrate înainte de clasificare. Excluderile de evenimente (titluri specifice) sunt de asemenea aplicate. Doar cele 15 excluderi de evenimente adăugate cel mai recent sunt luate în considerare; excluderile de artist, loc și organizator nu au limită.",
+    "howExclusionsWork": "Când căutăm evenimente pentru newsletterul tău, sistemul exclude orice eveniment care se potrivește dislike-urilor tale: evenimente cu artist, loc sau organizator exclus sunt filtrate înainte de clasificare. Dislike-urile de evenimente (titluri specifice) sunt de asemenea aplicate. Doar cele 15 dislike-uri de evenimente adăugate cel mai recent sunt luate în considerare; dislike-urile de artist, loc și organizator nu au limită.",
+    "dislikeInfoModalTitle": "Tocmai ai exclus ceva — hai să vedem ce înseamnă",
+    "dislikeInfoLine1": "Tocmai ai exclus ceva — hai să vedem ce înseamnă.",
+    "dislikeInfoLine2": "Exclude acest eveniment — AI-ul ia în calcul detaliile evenimentului mai opac.",
+    "dislikeInfoLine3": "Sau exclude locul/artistul/organizatorul — o excludere puternică. Nu vei mai primi alte evenimente de la ei.",
+    "dislikeInfoLine4": "Dislike-urile mele — vizualizează și editează lista dacă îți schimbi părerea",
+    "dislikeInfoLine4Page": "Lista ta este mai jos — editează sau șterge orice dacă îți schimbi părerea",
+    "pageHeader": "Dislike-urile tale",
+    "dislikeInfoLine5": "Ține minte: orientează-te spre 'destul de bine', nu perfect.",
     "typeOrganizer": "Organizator",
     "typeArtist": "Artist",
     "typeVenue": "Loc"
