--- a/frontend/src/i18n/locales/ro.json
+++ b/frontend/src/i18n/locales/ro.json
@@ -69,7 +69,7 @@
     "readMore": "Apasă pentru a citi mai multe despre acest serviciu",
     "expandHint": "Apasă pentru explicația completă",
     "hideDetails": "Ascunde detaliile",
-    "description": "Newsletter săptămânal de evenimente. Curat de tine.",
+    "description": "Evenimente locale. Curate de AI, pentru tine.",
     "whyExists": "De ce există attendtion:",
     "why1": "🚫 Ca sa nu fie nevoie sa cauti pe rețele sociale — evită capcana dopaminei din feed-urile nesfârșite",
     "why2": "📧 Sa reduca problema la un email săptămânal — intenționat, nu pasiv. Primești evenimente pentru luna următoare, așa că ai timp să planifici",
@@ -320,6 +320,6 @@
     "payment": "5. Plată",
     "paymentContent": "Acesta va fi un serviciu plătit când va fi lansat. Plata anuală este transparentă și directă—plătești pentru serviciu, și asta e tot.",
     "contact": "6. Contact",
-    "contactContent": "Pentru întrebări legate de confidențialitate sau pentru a-ți exercita drepturile (acces, ștergere, etc.), contactează-ne la support@attendtion.eu."
+    "contactContent": "Pentru întrebări legate de confidențialitate sau pentru a-ți exercita drepturile (acces, ștergere, etc.), contactează-ne la support@event-newsletter.com."
   }
 }
